--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@ a:active {
     </a>
 
     <!-- Esempio tracciato 2 -->
-    <a href="silverstone.html" class="track">
-      <img src="logo-silverstone.png" alt="Circuito di Silverstone">
+    <a href="Castelletto.html" class="track">
+      <img src="tracciati\castelletto.png" alt="Circuito di Castelletto">
     </a>
 
     <!-- Esempio tracciato 3 -->
-    <a href="spa.html" class="track">
-      <img src="logo-spa.png" alt="Circuito di Spa">
+    <a href="TazioNuvolari.html" class="track">
+      <img src="tracciati\tazionuvolari.png" alt="Circuito Tazio Nuvolari">
     </a>
 
     <!-- Aggiungi altri tracciati -->
@@ -99,4 +99,3 @@ a:active {
 
 </body>
 </html>
-
