--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@ a:active {
 
     <!-- Esempio tracciato 2 -->
     <a href="Castelletto.html" class="track">
-      <img src="tracciati\castelletto.png" alt="Circuito di Castelletto">
+      <img src="tracciati\castelletto.jpg" alt="Circuito di Castelletto">
     </a>
 
     <!-- Esempio tracciato 3 -->
     <a href="TazioNuvolari.html" class="track">
-      <img src="tracciati\tazionuvolari.png" alt="Circuito Tazio Nuvolari">
+      <img src="tracciati\tazionuvolari.jpg" alt="Circuito Tazio Nuvolari">
     </a>
 
     <!-- Aggiungi altri tracciati -->
@@ -99,3 +99,4 @@ a:active {
 
 </body>
 </html>
+
