--- a/TazioNuvolari.html
+++ b/TazioNuvolari.html
@@ -72,7 +72,7 @@ a:active {
 </head>
 <body>
 
-  <img src="tracciati\tazionuvolari.png" alt="Logo Tazio Nuvolari" style="display:block; margin:20px auto; width:751px;">
+  <img src="tracciati\tazionuvolari.jpg" alt="Logo Tazio Nuvolari" style="display:block; margin:20px auto; width:751px;">
 
   <table id="myTable">
     <thead>
@@ -182,3 +182,4 @@ a:active {
 
 </body>
 </html>
+
