--- a/Arese.html
+++ b/Arese.html
@@ -91,13 +91,13 @@ a:active {
         <td>
          <div class="pilot">
          <img src="bandiere/italia-48.png" alt="Italia" class="flag">
-         <span>Fede</span>
+         <span>Federico</span>
          </div>
         </td>
-        <td>Red Bull</td>
-        <td>390</td>
-        <td>1:20.5</td>
-		<td><a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1>Video</a></td>
+        <td>MX-5 ND 1.5</td>
+        <td>122.8</td>
+        <td>01:00.58</td>
+		<td><a https://youtu.be/uInYpbsof-Q?feature=shared>Video</a></td>
       </tr>
       <tr>
         <td>2</td>
@@ -182,3 +182,4 @@ a:active {
 
 </body>
 </html>
+
