--- a/Arese.html
+++ b/Arese.html
@@ -97,7 +97,7 @@ a:active {
         <td>MX-5 ND 1.5</td>
         <td>122.8</td>
         <td>01:00.58</td>
-		<td><a https://youtu.be/uInYpbsof-Q?feature=shared>Video</a></td>
+		<td><a href=https://youtu.be/uInYpbsof-Q?feature=shared>Video</a></td>
       </tr>
       <tr>
         <td>2</td>
@@ -107,24 +107,37 @@ a:active {
          <span>Manzo</span>
          </div>
         </td>
-        <td>Ferrari</td>
-        <td>280</td>
-        <td>1:21.2</td>
-		<td><a href=https://www.youtube.com/watch?v=E8gmARGvPlI&list=RDE8gmARGvPlI&start_radio=1>Video</a></td>
+        <td>MX-5 ND 2.0 (184)</td>
+        <td>136.1</td>
+        <td>00:57.56</td>
+		<td><a href=https://www.youtube.com/watch?v=yHaNu-s2uIs>Video</a></td>
       </tr>
       <tr>
         <td>3</td>
         <td>
          <div class="pilot">
          <img src="bandiere/italia-48.png" alt="Italia" class="flag">
-         <span>Ale</span>
+         <span>Alessio</span>
          </div>
         </td>
-        <td>Mercedes</td>
-        <td>310</td>
-        <td>1:19.8</td>
-		<td><a href=https://www.youtube.com/watch?v=7SiFPFxcEcg&list=RD7SiFPFxcEcg&start_radio=1>Video</a></td>
-      </tr>
+        <td>MX-5 NB/FL 1.6</td>
+        <td>119.6</td>
+        <td>01:01.05</td>
+		<td><a href=https://youtu.be/EsBk1PF9zmQ>Video</a></td>
+       </tr>
+	   <tr>
+        <td>3</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <span>Roberto</span>
+         </div>
+        </td>
+        <td>MX-5 NB/FL 1.6</td>
+        <td>108.7</td>
+        <td>01:05.55</td>
+		<td>n/a</td>
+	   </tr>
     </tbody>
   </table>
 
@@ -182,4 +195,5 @@ a:active {
 
 </body>
 </html>
+
 
