--- a/Arese.html
+++ b/Arese.html
@@ -126,7 +126,7 @@ a:active {
 		<td><a href=https://youtu.be/EsBk1PF9zmQ>Video</a></td>
        </tr>
 	   <tr>
-        <td>3</td>
+        <td>4</td>
         <td>
          <div class="pilot">
          <img src="bandiere/italia-48.png" alt="Italia" class="flag">
@@ -138,6 +138,32 @@ a:active {
         <td>01:05.55</td>
 		<td>n/a</td>
 	   </tr>
+	   <tr>
+        <td>5</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <span>Mauro</span>
+         </div>
+        </td>
+        <td>MX-5 ND 1.5</td>
+        <td>116.1</td>
+        <td>01:04.73</td>
+		<td>n/a</td>
+       </tr>
+	   <tr>
+        <td>6</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <span>Tommaso</span>
+         </div>
+        </td>
+        <td>MX-5 NB/FL 1.8</td>
+        <td>116.1</td>
+        <td>01:02.5</td>
+		<td>n/a</td>
+       </tr>
     </tbody>
   </table>
 
@@ -195,5 +221,6 @@ a:active {
 
 </body>
 </html>
+
 
 
