--- a/Arese.html
+++ b/Arese.html
@@ -160,8 +160,112 @@ a:active {
          </div>
         </td>
         <td>MX-5 NB/FL 1.8</td>
-        <td>116.1</td>
+        <td>n/a</td>
         <td>01:02.5</td>
+		<td>n/a</td>
+       </tr>
+	   <tr>
+        <td>7</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <span>Micheal</span>
+         </div>
+        </td>
+        <td>MX-5 NB/FL 1.8</td>
+        <td>127</td>
+        <td>01:01.49</td>
+		<td>n/a</td>
+       </tr>
+	   <tr>
+        <td>8</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <span>Steve</span>
+         </div>
+        </td>
+        <td>MX-5 NB/FL 1.8</td>
+        <td>n/a</td>
+        <td>00:59.37</td>
+		<td>n/a</td>
+       </tr>
+	   <tr>
+        <td>9</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <span>Francesco</span>
+         </div>
+        </td>
+        <td>MX-5 NB/FL 1.6(T)</td>
+        <td>134.6</td>
+        <td>00:58.9</td>
+		<td>n/a</td>
+       </tr>
+	   <tr>
+        <td>9</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <span>Mike</span>
+         </div>
+        </td>
+        <td>MX-5 NA 1.8</td>
+        <td>122.3</td>
+        <td>00:58.71</td>
+		<td>n/a</td>
+       </tr>
+	   <tr>
+        <td>10</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <span>Satz</span>
+         </div>
+        </td>
+        <td>MX-5 NC 2.0</td>
+        <td>n/a</td>
+        <td>00:55.30</td>
+		<td>n/a</td>
+       </tr>
+	   <tr>
+        <td>11</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <span>Lorenzo</span>
+         </div>
+        </td>
+        <td>987 Cayman S</td>
+        <td>148.6</td>
+        <td>00:53.48</td>
+		<td>n/a</td>
+       </tr>
+	   <tr>
+        <td>12</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <span>Davide</span>
+         </div>
+        </td>
+        <td>MX-5 ND 2.0 (184)</td>
+        <td>148.6</td>
+        <td>00:52.80</td>
+		<td><a href=https://youtu.be/nLrQTQlRwpw?si=sZQStYHoACorAk-o>Video</a></td>
+       </tr>
+	   <tr>
+        <td>13</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <span>Dennis</span>
+         </div>
+        </td>
+        <td>MX-5 ND 2.0 (184)</td>
+        <td>tba</td>
+        <td>tba</td>
 		<td>n/a</td>
        </tr>
     </tbody>
@@ -221,6 +325,7 @@ a:active {
 
 </body>
 </html>
+
 
 
 
