--- a/Arese.html
+++ b/Arese.html
@@ -90,7 +90,7 @@ a:active {
         <td>1</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Federico</span>
          </div>
         </td>
@@ -116,7 +116,7 @@ a:active {
         <td>3</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Alessio</span>
          </div>
         </td>
@@ -129,7 +129,7 @@ a:active {
         <td>4</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Roberto</span>
          </div>
         </td>
@@ -142,7 +142,7 @@ a:active {
         <td>5</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Mauro</span>
          </div>
         </td>
@@ -155,7 +155,7 @@ a:active {
         <td>6</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Tommaso</span>
          </div>
         </td>
@@ -168,7 +168,7 @@ a:active {
         <td>7</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Micheal</span>
          </div>
         </td>
@@ -181,7 +181,7 @@ a:active {
         <td>8</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Steve</span>
          </div>
         </td>
@@ -194,7 +194,7 @@ a:active {
         <td>9</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Francesco</span>
          </div>
         </td>
@@ -207,7 +207,7 @@ a:active {
         <td>9</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Mike</span>
          </div>
         </td>
@@ -220,7 +220,7 @@ a:active {
         <td>10</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Satz</span>
          </div>
         </td>
@@ -233,7 +233,7 @@ a:active {
         <td>11</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/svizzera.png" alt="Italia" class="flag">
          <span>Lorenzo</span>
          </div>
         </td>
@@ -246,7 +246,7 @@ a:active {
         <td>12</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Davide</span>
          </div>
         </td>
@@ -259,7 +259,7 @@ a:active {
         <td>13</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Dennis</span>
          </div>
         </td>
@@ -325,6 +325,7 @@ a:active {
 
 </body>
 </html>
+
 
 
 
