--- a/Arese.html
+++ b/Arese.html
@@ -264,14 +264,23 @@ a:active {
          </div>
         </td>
         <td>MX-5 ND 2.0 (184)</td>
-        <td>tba</td>
-        <td>tba</td>
+        <td>132.5</td>
+        <td>01:00.39</td>
 		<td>n/a</td>
        </tr>
     </tbody>
   </table>
 
-  <script>
+<script>
+    // Funzione che converte un tempo "MM:SS.xx" o "MM:SS:xx" in centesimi di secondo
+    function parseTime(str) {
+      const parts = str.split(/[:.]/); // divide su ":" e "."
+      const minutes = parseInt(parts[0], 10) || 0;
+      const seconds = parseInt(parts[1], 10) || 0;
+      const centiseconds = parseInt(parts[2], 10) || 0;
+      return (minutes * 60 + seconds) * 100 + centiseconds;
+    }
+
     function sortTable(table, colIndex, thElement, forceDesc = false) {
       const tbody = table.tBodies[0];
       const rows = Array.from(tbody.querySelectorAll("tr"));
@@ -284,12 +293,14 @@ a:active {
         const aText = a.cells[colIndex].textContent.trim();
         const bText = b.cells[colIndex].textContent.trim();
 
-        // prova numerico
-        const aNum = parseFloat(aText.replace(":", "."));
-        const bNum = parseFloat(bText.replace(":", "."));
-        if (!isNaN(aNum) && !isNaN(bNum)) {
-          return asc ? aNum - bNum : bNum - aNum;
+        // prova come tempo
+        const aTime = parseTime(aText);
+        const bTime = parseTime(bText);
+
+        if (!isNaN(aTime) && !isNaN(bTime)) {
+          return asc ? aTime - bTime : bTime - aTime;
         }
+        // fallback: confronto testuale
         return asc ? aText.localeCompare(bText) : bText.localeCompare(aText);
       });
 
@@ -321,10 +332,11 @@ a:active {
       const th = table.querySelectorAll("th")[4]; // colonna Miglior giro
       sortTable(table, 4, th, true); // forza ordine decrescente
     };
-  </script>
+</script>
 
 </body>
 </html>
+
 
 
 
