--- a/Arese.html
+++ b/Arese.html
@@ -71,9 +71,13 @@ a:active {
   </style>
 </head>
 <body>
-
+ <div class="header">
+  <!-- Logo della pista -->
   <img src="tracciati\Arese.png" alt="Logo Arese" style="display:block; margin:20px auto; width:751px;">
-
+  <!-- Tasto Home -->
+  <a href="index.html" class="home-btn">🏠 Home</a>
+ </div>
+	
   <table id="myTable">
     <thead>
       <tr>
@@ -336,6 +340,7 @@ a:active {
 
 </body>
 </html>
+
 
 
 
