--- a/tabella-base.html
+++ b/tabella-base.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Classifica Formula 1</title>
+  <title>Classifica Coppa del Nonno</title>
   <style>
     body {
       background-color: #2b2b2b; /* sfondo pagina grigio scuro */
@@ -41,12 +41,43 @@
     th.no-sort {
       cursor: default; /* colonna non ordinabile */
     }
+	/* Colore link in vari stati */
+a:link {
+  color: #ff0000; /* rosso acceso per link normali */
+  text-decoration: none; /* rimuove sottolineatura */
+}
+
+a:visited {
+  color: #cc0000; /* rosso più scuro per link già visitati */
+}
+
+a:hover {
+  color: #ff4d4d; /* rosso chiaro al passaggio */
+  text-decoration: underline; /* sottolinea al passaggio */
+}
+
+a:active {
+  color: #990000; /* rosso scuro quando cliccato */
+}
+.pilot {
+  display: flex;
+  align-items: center; /* allinea verticalmente al centro */
+  justify-content: flex-start; /* bandiera e testo allineati a sinistra */
+}
+.flag {
+  width: 24px;
+  margin-right: 8px;
+}
   </style>
 </head>
 <body>
-
-  <img src="CdN.png" alt="Logo Formula 1" style="display:block; margin:20px auto; width:751px;">
-
+ <div class="header">
+  <!-- Logo della pista -->
+  <img src="tracciati\Arese.png" alt="Logo Arese" style="display:block; margin:20px auto; width:751px;">
+  <!-- Tasto Home -->
+  <a href="index.html" class="home-btn">🏠 Home</a>
+ </div>
+	
   <table id="myTable">
     <thead>
       <tr>
@@ -86,7 +117,16 @@
     </tbody>
   </table>
 
-  <script>
+<script>
+    // Funzione che converte un tempo "MM:SS.xx" o "MM:SS:xx" in centesimi di secondo
+    function parseTime(str) {
+      const parts = str.split(/[:.]/); // divide su ":" e "."
+      const minutes = parseInt(parts[0], 10) || 0;
+      const seconds = parseInt(parts[1], 10) || 0;
+      const centiseconds = parseInt(parts[2], 10) || 0;
+      return (minutes * 60 + seconds) * 100 + centiseconds;
+    }
+
     function sortTable(table, colIndex, thElement, forceDesc = false) {
       const tbody = table.tBodies[0];
       const rows = Array.from(tbody.querySelectorAll("tr"));
@@ -99,12 +139,14 @@
         const aText = a.cells[colIndex].textContent.trim();
         const bText = b.cells[colIndex].textContent.trim();
 
-        // prova numerico
-        const aNum = parseFloat(aText.replace(":", "."));
-        const bNum = parseFloat(bText.replace(":", "."));
-        if (!isNaN(aNum) && !isNaN(bNum)) {
-          return asc ? aNum - bNum : bNum - aNum;
+        // prova come tempo
+        const aTime = parseTime(aText);
+        const bTime = parseTime(bText);
+
+        if (!isNaN(aTime) && !isNaN(bTime)) {
+          return asc ? aTime - bTime : bTime - aTime;
         }
+        // fallback: confronto testuale
         return asc ? aText.localeCompare(bText) : bText.localeCompare(aText);
       });
 
@@ -136,7 +178,8 @@
       const th = table.querySelectorAll("th")[4]; // colonna Miglior giro
       sortTable(table, 4, th, true); // forza ordine decrescente
     };
-  </script>
+</script>
 
 </body>
 </html>
+
