--- a/Castelletto.html
+++ b/Castelletto.html
@@ -75,7 +75,14 @@ a:active {
   <!-- Logo della pista -->
   <img src="tracciati\castelletto.jpg" alt="Logo Castelletto" style="display:block; margin:20px auto; width:751px;">
   <!-- Tasto Home -->
-  <a href="index.html" class="home-btn">🏠 Home</a>
+  <a href="index.html" class="home-btn">
+  <svg xmlns="http://www.w3.org/2000/svg" 
+       width="24" height="24" viewBox="0 0 24 24" 
+       fill="white">
+    <path d="M12 3l9 9h-3v9h-12v-9h-3l9-9z"/>
+  </svg>
+  Home
+  </a>
  </div>
 
   <table id="myTable">
@@ -197,5 +204,6 @@ a:active {
 
 </body>
 </html>
+
 
 
