--- a/TazioNuvolari.html
+++ b/TazioNuvolari.html
@@ -86,6 +86,7 @@ a:active {
         <th>Auto</th>
         <th>Velocità Massima</th>
         <th>Miglior giro</th>
+		<th>Stagione</th>
 		<th>Video</th>
       </tr>
     </thead>
@@ -101,6 +102,7 @@ a:active {
         <td>Red Bull</td>
         <td>390</td>
         <td>1:20.5</td>
+		<td>2025</td>
 		<td><a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1>Video</a></td>
       </tr>
       <tr>
@@ -114,6 +116,7 @@ a:active {
         <td>Ferrari</td>
         <td>280</td>
         <td>1:21.2</td>
+		<td>2025</td>
 		<td><a href=https://www.youtube.com/watch?v=E8gmARGvPlI&list=RDE8gmARGvPlI&start_radio=1>Video</a></td>
       </tr>
       <tr>
@@ -127,6 +130,7 @@ a:active {
         <td>Mercedes</td>
         <td>310</td>
         <td>1:19.8</td>
+		<td>2025</td>
 		<td><a href=https://www.youtube.com/watch?v=7SiFPFxcEcg&list=RD7SiFPFxcEcg&start_radio=1>Video</a></td>
       </tr>
     </tbody>
@@ -197,5 +201,6 @@ a:active {
 
 </body>
 </html>
+
 
 
