--- a/Arese.html
+++ b/Arese.html
@@ -86,6 +86,7 @@ a:active {
         <th>Auto</th>
         <th>Velocità Massima</th>
         <th>Miglior giro</th>
+		<th>Stagione</th>
 		<th>Video</th>
       </tr>
     </thead>
@@ -101,6 +102,7 @@ a:active {
         <td>MX-5 ND 1.5</td>
         <td>122.8</td>
         <td>01:00.58</td>
+		<td>2025</td>
 		<td><a href=https://youtu.be/uInYpbsof-Q?feature=shared>Video</a></td>
       </tr>
       <tr>
@@ -114,6 +116,7 @@ a:active {
         <td>MX-5 ND 2.0 (184)</td>
         <td>136.1</td>
         <td>00:57.56</td>
+		<td>2025</td>
 		<td><a href=https://www.youtube.com/watch?v=yHaNu-s2uIs>Video</a></td>
       </tr>
       <tr>
@@ -127,6 +130,7 @@ a:active {
         <td>MX-5 NB/FL 1.6</td>
         <td>119.6</td>
         <td>01:01.05</td>
+		<td>2025</td>
 		<td><a href=https://youtu.be/EsBk1PF9zmQ>Video</a></td>
        </tr>
 	   <tr>
@@ -140,6 +144,7 @@ a:active {
         <td>MX-5 NB/FL 1.6</td>
         <td>108.7</td>
         <td>01:05.55</td>
+		<td>2025</td>
 		<td>n/a</td>
 	   </tr>
 	   <tr>
@@ -153,6 +158,7 @@ a:active {
         <td>MX-5 ND 1.5</td>
         <td>116.1</td>
         <td>01:04.73</td>
+		<td>2025</td>
 		<td>n/a</td>
        </tr>
 	   <tr>
@@ -166,6 +172,7 @@ a:active {
         <td>MX-5 NB/FL 1.8</td>
         <td>n/a</td>
         <td>01:02.50</td>
+		<td>2025</td>
 		<td>n/a</td>
        </tr>
 	   <tr>
@@ -179,6 +186,7 @@ a:active {
         <td>MX-5 NB/FL 1.8</td>
         <td>127</td>
         <td>01:01.49</td>
+		<td>2025</td>
 		<td>n/a</td>
        </tr>
 	   <tr>
@@ -192,6 +200,7 @@ a:active {
         <td>MX-5 NB/FL 1.8</td>
         <td>n/a</td>
         <td>00:59.37</td>
+		<td>2025</td>
 		<td>n/a</td>
        </tr>
 	   <tr>
@@ -205,6 +214,7 @@ a:active {
         <td>MX-5 NB/FL 1.6(T)</td>
         <td>134.6</td>
         <td>00:58.90</td>
+		<td>2025</td>
 		<td>n/a</td>
        </tr>
 	   <tr>
@@ -218,6 +228,7 @@ a:active {
         <td>MX-5 NA 1.8</td>
         <td>122.3</td>
         <td>00:58.71</td>
+		<td>2025</td>
 		<td>n/a</td>
        </tr>
 	   <tr>
@@ -231,6 +242,7 @@ a:active {
         <td>MX-5 NC 2.0</td>
         <td>n/a</td>
         <td>00:55.30</td>
+		<td>2025</td>
 		<td>n/a</td>
        </tr>
 	   <tr>
@@ -244,6 +256,7 @@ a:active {
         <td>987 Cayman S</td>
         <td>148.6</td>
         <td>00:53.48</td>
+		<td>2025</td>
 		<td>n/a</td>
        </tr>
 	   <tr>
@@ -257,6 +270,7 @@ a:active {
         <td>MX-5 ND 2.0 (184)</td>
         <td>148.6</td>
         <td>00:52.80</td>
+		<td>2025</td>
 		<td><a href=https://youtu.be/nLrQTQlRwpw?si=sZQStYHoACorAk-o>Video</a></td>
        </tr>
 	   <tr>
@@ -270,6 +284,21 @@ a:active {
         <td>MX-5 ND 2.0 (184)</td>
         <td>132.5</td>
         <td>01:00.39</td>
+		<td>2025</td>
+		<td>n/a</td>
+       </tr>
+	   <tr>
+        <td>14</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
+         <span>Alberto</span>
+         </div>
+        </td>
+        <td>MX-5 RF 1.5</td>
+        <td>125</td>
+        <td>01:01.00</td>
+		<td>2025</td>
 		<td>n/a</td>
        </tr>
     </tbody>
@@ -340,6 +369,7 @@ a:active {
 
 </body>
 </html>
+
 
 
 
