--- a/Castelletto.html
+++ b/Castelletto.html
@@ -95,44 +95,31 @@ a:active {
         <td>1</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
-         <span>Fede</span>
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
+         <span>Luca</span>
          </div>
         </td>
-        <td>Red Bull</td>
-        <td>390</td>
-        <td>1:20.5</td>
+        <td>MX-5 NA 115</td>
+        <td>n/a</td>
+        <td>01:32.24</td>
 		<td>2025</td>
-		<td><a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1>Video</a></td>
+		<td>n/a</td>
       </tr>
       <tr>
         <td>2</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/arcobaleno-48.png" alt="Italia" class="flag">
-         <span>Manzo</span>
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
+         <span>Alessio</span>
          </div>
         </td>
-        <td>Ferrari</td>
-        <td>280</td>
-        <td>1:21.2</td>
+        <td>MX-5 NB/FL 1.6</td>
+        <td>112.9</td>
+        <td>1:42.92</td>
 		<td>2025</td>
-		<td><a href=https://www.youtube.com/watch?v=E8gmARGvPlI&list=RDE8gmARGvPlI&start_radio=1>Video</a></td>
+		<td><a href=https://youtu.be/AW948qCoz34>Video</a></td>
       </tr>
-      <tr>
-        <td>3</td>
-        <td>
-         <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
-         <span>Ale</span>
-         </div>
-        </td>
-        <td>Mercedes</td>
-        <td>310</td>
-        <td>1:19.8</td>
-		<td>2025</td>
-		<td><a href=https://www.youtube.com/watch?v=7SiFPFxcEcg&list=RD7SiFPFxcEcg&start_radio=1>Video</a></td>
-      </tr>
+     
     </tbody>
   </table>
 
@@ -201,6 +188,7 @@ a:active {
 
 </body>
 </html>
+
 
 
 
