--- a/TazioNuvolari.html
+++ b/TazioNuvolari.html
@@ -92,46 +92,32 @@ a:active {
     </thead>
     <tbody>
       <tr>
-        <td>1</td>
-        <td>
-         <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
-         <span>Fede</span>
-         </div>
-        </td>
-        <td>Red Bull</td>
-        <td>390</td>
-        <td>1:20.5</td>
-		<td>2025</td>
-		<td><a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1>Video</a></td>
-      </tr>
-      <tr>
-        <td>2</td>
+        <td> </td>
         <td>
          <div class="pilot">
          <img src="bandiere/arcobaleno-48.png" alt="Italia" class="flag">
          <span>Manzo</span>
          </div>
         </td>
-        <td>Ferrari</td>
-        <td>280</td>
-        <td>1:21.2</td>
+        <td>Elise</td>
+        <td>175.6</td>
+        <td>01:42.75</td>
 		<td>2025</td>
-		<td><a href=https://www.youtube.com/watch?v=E8gmARGvPlI&list=RDE8gmARGvPlI&start_radio=1>Video</a></td>
+		<td><a href=https://www.youtube.com/watch?v=H4-C2Nqwc7U>Video</a></td>
       </tr>
       <tr>
-        <td>3</td>
+        <td> </td>
         <td>
          <div class="pilot">
          <img src="bandiere/italia-48.png" alt="Italia" class="flag">
-         <span>Ale</span>
+         <span>Alessio</span>
          </div>
         </td>
         <td>Mercedes</td>
-        <td>310</td>
-        <td>1:19.8</td>
+        <td>142.4</td>
+        <td>01:52.73</td>
 		<td>2025</td>
-		<td><a href=https://www.youtube.com/watch?v=7SiFPFxcEcg&list=RD7SiFPFxcEcg&start_radio=1>Video</a></td>
+		<td><a href=https://youtu.be/bVIkBsux-L8>Video</a></td>
       </tr>
     </tbody>
   </table>
@@ -201,6 +187,7 @@ a:active {
 
 </body>
 </html>
+
 
 
 
