--- a/TazioNuvolari.html
+++ b/TazioNuvolari.html
@@ -109,7 +109,7 @@ a:active {
         <td> </td>
         <td>
          <div class="pilot">
-         <img src="bandiere/italia-48.png" alt="Italia" class="flag">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
          <span>Alessio</span>
          </div>
         </td>
@@ -187,6 +187,7 @@ a:active {
 
 </body>
 </html>
+
 
 
 
