--- a/TazioNuvolari.html
+++ b/TazioNuvolari.html
@@ -95,7 +95,7 @@ a:active {
         <td> </td>
         <td>
          <div class="pilot">
-         <img src="bandiere/arcobaleno-48.png" alt="Italia" class="flag">
+         <img src="bandiere/australia.png" alt="Italia" class="flag">
          <span>Manzo</span>
          </div>
         </td>
@@ -187,6 +187,7 @@ a:active {
 
 </body>
 </html>
+
 
 
 
