--- a/tabella-base.html
+++ b/tabella-base.html
@@ -73,11 +73,11 @@ a:active {
 <body>
  <div class="header">
   <!-- Logo della pista -->
-  <img src="tracciati\Arese.png" alt="Logo Arese" style="display:block; margin:20px auto; width:751px;">
+  <img src="tracciati\castelletto.jpg" alt="Logo Castelletto" style="display:block; margin:20px auto; width:751px;">
   <!-- Tasto Home -->
   <a href="index.html" class="home-btn">🏠 Home</a>
  </div>
-	
+
   <table id="myTable">
     <thead>
       <tr>
@@ -93,31 +93,33 @@ a:active {
     <tbody>
       <tr>
         <td>1</td>
-        <td>Verstappen</td>
-        <td>Red Bull</td>
-        <td>390</td>
-        <td>1:20.5</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
+         <span>Luca</span>
+         </div>
+        </td>
+        <td>MX-5 NA 115</td>
+        <td>n/a</td>
+        <td>01:32.24</td>
 		<td>2025</td>
-		<td><a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1>Video</a></td>
+		<td>n/a</td>
       </tr>
       <tr>
         <td>2</td>
-        <td>Leclerc</td>
-        <td>Ferrari</td>
-        <td>280</td>
-        <td>1:21.2</td>
+        <td>
+         <div class="pilot">
+         <img src="bandiere/italia.png" alt="Italia" class="flag">
+         <span>Alessio</span>
+         </div>
+        </td>
+        <td>MX-5 NB/FL 1.6</td>
+        <td>112.9</td>
+        <td>1:42.92</td>
 		<td>2025</td>
-		<td><a href=https://www.youtube.com/watch?v=E8gmARGvPlI&list=RDE8gmARGvPlI&start_radio=1>Video</a></td>
+		<td><a href=https://youtu.be/AW948qCoz34>Video</a></td>
       </tr>
-      <tr>
-        <td>3</td>
-        <td>Hamilton</td>
-        <td>Mercedes</td>
-        <td>310</td>
-        <td>1:19.8</td>
-		<td>2025</td>
-		<td><a href=https://www.youtube.com/watch?v=7SiFPFxcEcg&list=RD7SiFPFxcEcg&start_radio=1>Video</a></td>
-      </tr>
+     
     </tbody>
   </table>
 
@@ -186,5 +188,3 @@ a:active {
 
 </body>
 </html>
-
-
