--- a/Arese.html
+++ b/Arese.html
@@ -109,7 +109,7 @@ a:active {
         <td>2</td>
         <td>
          <div class="pilot">
-         <img src="bandiere/arcobaleno-48.png" alt="Italia" class="flag">
+         <img src="bandiere/australia.png" alt="Italia" class="flag">
          <span>Manzo</span>
          </div>
         </td>
@@ -369,6 +369,7 @@ a:active {
 
 </body>
 </html>
+
 
 
 
